fix grid gap

--- a/app/assets/css/index.css
+++ b/app/assets/css/index.css
@@ -149,7 +149,11 @@ body {
   font-family: "Open Sans", sans-serif;
   grid-template-areas: "header" "content" "navigation" "footer";
   grid-template-rows: 80px 1fr 1fr 70px;
-  grid-template-columns: 1fr; }
+  grid-template-columns: 1fr;
+  grid-row-gap: 2%;
+  grid-column-gap: 1%;
+  height: 100vh;
+  margin: 0; }
 
 header,
 footer,
@@ -165,11 +169,7 @@ nav {
   body {
     grid-template-areas: "header header" "navigation content" "footer footer";
     grid-template-rows: 80px 1fr;
-    grid-template-columns: 20% 1fr;
-    grid-row-gap: 2%;
-    grid-column-gap: 1%;
-    height: 100vh;
-    margin: 0; } }
+    grid-template-columns: 20% 1fr; } }
 
 /* FOOTER
 ------------------------------------------------------------------------*/
